<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessagesActivity">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_gray"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="58dp">


            <RelativeLayout
                android:id="@+id/mes_top_bar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/bg_topbar">

                <TextView
                    android:id="@+id/txt_top_mes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="消息中心"
                    android:textColor="@color/text_topbar"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_alignParentBottom="true"
                    android:background="@color/div_white" />

            </RelativeLayout>


            <RadioGroup
                android:id="@+id/search_message_bar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="48dp"
                android:background="@color/bg_white"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mes_btn_sys"
                    style="@style/les_menu_item"
                    android:layout_width="137dp"
                    android:text="系统消息" />

                <Button
                    android:id="@+id/mes_btn_get"
                    style="@style/les_menu_item"
                    android:layout_width="137dp"
                    android:text="收到的回复" />

                <Button
                    android:id="@+id/mes_btn_sea"
                    style="@style/les_menu_item"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="27dp"
                    android:background="@drawable/research" />
            </RadioGroup>

            <ListView
                android:id="@+id/list_message"
                android:layout_width="match_parent"
                android:layout_height="571dp"
                android:layout_below="@+id/search_message_bar"
                ></ListView>

            <RadioGroup
                android:id="@+id/mes_tab_bar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:background="@color/bg_white"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/mes_myself"
                    style="@style/tab_menu_item"
                    android:drawableTop="@drawable/personal"
                    android:text="@string/tab_menu_myself" />

                <Button
                    android:id="@+id/mes_mylessons"
                    style="@style/tab_menu_item"
                    android:drawableTop="@drawable/plan"
                    android:text="@string/tab_menu_mylessons" />

                <Button
                    android:id="@+id/mes_messages"
                    style="@style/tab_menu_item"
                    android:drawableTop="@drawable/mail"
                    android:text="@string/tab_menu_messages" />
            </RadioGroup>

            <View
                android:id="@+id/div_tab_bar"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_above="@id/mes_tab_bar"
                android:background="@color/div_white" />


        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>